# paperflow

./: .env.example  .gitignore  AGENTS.md  API_QUICKSTART.md  NEW_PAPER_SOURCES_PLAN.md  ORGANIZATION_TAXONOMY.md  RUNBOOK.md  arxiv-radar  arxiv-radar.yaml  arxiv-reading-list.example.txt  arxiv_radar_cli.py  boox-sync  boox_sync_cli.py  booxdrop_cli.py  paperflow_cli.py  paperflow_http.py  paperflow_periodical.py  paperflow_publish.py  paperflow_radar.py  paperflow_refresh.py  paperflow_sources.py  paperflow_sources_huggingface.py  paperflow_terminal.py  pyproject.toml  radar_db.py  sync-contract.example.yaml
scripts/: radar-refresh-cron.sh
tests/: test_cli.py  test_periodical.py  test_publish.py  test_terminal.py
tests/integration/: test_cron_safe_refresh.py
tex/: .chktexrc  .gitignore  justfile
tex/research-radar/: justfile
tex/shared/: .chktexrc  exec-report.cls  research-radar.cls
