[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paperflow"
version = "0.1.0"
description = "Research paper radar and BOOX sync tooling"
requires-python = ">=3.11"
dependencies = [
  "pymupdf4llm>=1.27.2.2",
  "pyyaml>=6.0.3",
  "rich>=13.9.4",
  "textual>=8.2.3",
  "typer>=0.24.1",
  "websockets>=16.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "testcontainers>=4.13.2",
]

[project.scripts]
paperflow = "paperflow_cli:main"
arxiv-radar = "arxiv_radar_cli:main"
boox-sync = "boox_sync_cli:main"

[tool.setuptools]
py-modules = [
  "arxiv_radar_cli",
  "boox_sync_cli",
  "booxdrop_cli",
  "paperflow_http",
  "paperflow_cli",
  "paperflow_periodical",
  "paperflow_publish",
  "paperflow_radar",
  "paperflow_refresh",
  "paperflow_sources",
  "paperflow_sources_huggingface",
  "paperflow_terminal",
  "radar_db",
]
